--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       content="La galería de Arte de TripleTen te invita a conocer un poco mejor los lugares de los que proceden tus colegas en línea"
     />
     <title>TripleTen Art Gallery</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <!-- FAVICON AQUI -->
-    <link rel="stylesheet" href="/pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <!-- TIPOGRAFIAS AQUI vvvv -->
   </head>
   <body>
