Actualización de proyecto 3

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           <a class="nav__logo" href="#">
             <img
               class="nav__logo-pc"
-              src="/images/logo-tripleten-art-gallery.svg"
+              src="./images/logo-tripleten-art-gallery.svg"
               alt="Logo TripleTen Art Gallery"
             />
             <img
               class="nav__logo-mobile"
-              src="/images/logo-mobile.svg"
+              src="./images/logo-mobile.svg"
               alt="logo-mobile"
             />
           </a>
@@ -44,7 +44,7 @@
           </div>
           <img
             class="header__front-image"
-            src="/images/hero-section-img.jpg"
+            src="./images/hero-section-img.jpg"
             alt="Paisaje de ciudad costera en blanco y negro"
           />
         </div>
