--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="page">
-      <div class="header">
+      <header class="header">
         <nav class="nav">
           <a class="nav__logo" href="#">
             <img
@@ -46,7 +46,7 @@
             alt="Paisaje de ciudad costera en blanco y negro"
           />
         </div>
-      </div>
+      </header>
       <main class="content">
         <h2 class="content__title">
           Conoce un poco mejor los lugares de los que proceden tus colegas en
