--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         </div>
       </header>
       <main class="content">
-        <h2 class="content__title">
-          Conoce un poco mejor los lugares de los que proceden tus colegas en
-          línea
-        </h2>
-        <div class="content__info">
+        <section>
+          <h2 class="content__title">
+            Conoce un poco mejor los lugares de los que proceden tus colegas en
+            línea
+          </h2>
+        </section>
+
+        <section class="content__info">
           <div class="content__quote">
             <q class="content__quote-text"
               >Todo ser humano es un artista, un ser de la libertad, llamado a
@@ -74,7 +77,7 @@
             arte visual dedicada a tu ciudad natal. No importa de dónde seas,
             nos alegra que seas nuestro vecino.
           </p>
-        </div>
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2024 Constanza Espinoza</p>
