--- a/index.html
+++ b/index.html
@@ -41,43 +41,265 @@
             </p>
           </div>
           <img
-            class="header__front-image"
+            class="header__front-image shadow"
             src="./images/hero-section-img.jpg"
             alt="Paisaje de ciudad costera en blanco y negro"
           />
         </div>
       </header>
       <main class="content">
-        <section>
+        <section class="content__section-information">
           <h2 class="content__title">
             Conoce un poco mejor los lugares de los que proceden tus colegas en
             línea
           </h2>
-        </section>
+          <div class="content__info">
+            <div class="content__quote">
+              <q class="content__quote-text"
+                >Todo ser humano es un artista, un ser de la libertad, llamado a
+                participar en la transformación y reforma de las condiciones, el
+                pensamiento y las estructuras que conforman e influyen en
+                nuestras vidas.</q
+              >
+              <p class="content__quote-author">— Joseph Beuys</p>
+            </div>
 
-        <section class="content__info">
-          <div class="content__quote">
-            <q class="content__quote-text"
-              >Todo ser humano es un artista, un ser de la libertad, llamado a
-              participar en la transformación y reforma de las condiciones, el
-              pensamiento y las estructuras que conforman e influyen en nuestras
-              vidas.</q
-            >
-            <p class="content__quote-author">— Joseph Beuys</p>
+            <p class="content__information">
+              La ciudad de TripleTen ha reunido a profesionales de diferentes
+              rincones del mundo. Hoy, la Galería de Arte TripleTen se
+              enorgullece de presentar historias y fotografías de algunas de las
+              personas que dedican su tiempo y esfuerzo a hacer que los futuros
+              profesionales de la tecnología de esta ciudad se sientan como en
+              casa. Cada uno de nosotros tiene una historia única sobre el lugar
+              del que procede. No dudes en añadir a nuestra colección tu propia
+              historia y una obra de arte visual dedicada a tu ciudad natal. No
+              importa de dónde seas, nos alegra que seas nuestro vecino.
+            </p>
+          </div>
+        </section>
+        <section class="gallery">
+          <div class="gallery__images">
+            <img
+              class="gallery-image"
+              src="./images/img-gallery-1.png"
+              alt="fotografía-1"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-2.png"
+              alt="fotografía-2"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-3.png"
+              alt="fotografía-3"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-4.png"
+              alt="fotografía-4"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-5.png"
+              alt="fotografía-5"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-6.png"
+              alt="fotografía-6"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-7.png"
+              alt="fotografía-7"
+            /><img
+              class="gallery-image"
+              src="./images/img-gallery-8.png"
+              alt="fotografía-8"
+            />
+          </div>
+        </section>
+        <section class="cities">
+          <div class="cities__container">
+            <div class="cities__title">
+              <h3>Cricieth,<br />Gales</h3>
+            </div>
+            <div class="cities__head-information">
+              <ul class="cities__personal-information">
+                <li class="cities__text-category">ARTISTA</li>
+                <li class="cities__text-person">Steffan Warren, editor jefe</li>
+                <li class="cities__text-person">
+                  Kseniya Glagoleva, gerente de proyectos
+                </li>
+              </ul>
+            </div>
+            <div class="cities__portada">
+              <img
+                class="shadow"
+                src="./images/img-cities-1.jpg"
+                alt="fotografía-ciudad"
+              />
+              <button></button>
+            </div>
+            <div class="cities__personal-description">
+              <p>
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p>
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
           </div>
 
-          <p class="content__information">
-            La ciudad de TripleTen ha reunido a profesionales de diferentes
-            rincones del mundo. Hoy, la Galería de Arte TripleTen se enorgullece
-            de presentar historias y fotografías de algunas de las personas que
-            dedican su tiempo y esfuerzo a hacer que los futuros profesionales
-            de la tecnología de esta ciudad se sientan como en casa. Cada uno de
-            nosotros tiene una historia única sobre el lugar del que procede. No
-            dudes en añadir a nuestra colección tu propia historia y una obra de
-            arte visual dedicada a tu ciudad natal. No importa de dónde seas,
-            nos alegra que seas nuestro vecino.
-          </p>
+          <div class="cities__container">
+            <div class="cities__title">
+              <h3>Berea,<br />EE.UU.</h3>
+            </div>
+            <div class="cities__head-information">
+              <ul class="cities__personal-information">
+                <li class="cities__text-category">ARTISTA</li>
+                <li class="cities__text-person">
+                  Travis Turner, autor y editor
+                </li>
+              </ul>
+            </div>
+            <div class="cities__portada">
+              <img
+                class="shadow"
+                src="./images/img-cities-2.jpg"
+                alt="fotografía-ciudad"
+              />
+              <button></button>
+            </div>
+            <div class="cities__personal-description">
+              <p>
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p>
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+          </div>
+
+          <div class="cities__container">
+            <div class="cities__title">
+              <h3>Muramvya,<br />Burundi</h3>
+            </div>
+            <div class="cities__head-information">
+              <ul class="cities__personal-information">
+                <li class="cities__text-category">ARTISTA</li>
+                <li class="cities__text-person">
+                  Grevisse Kenguruka, editor técnico
+                </li>
+              </ul>
+            </div>
+
+            <div class="cities__portada">
+              <img
+                class="shadow"
+                src="./images/img-cities-3.jpg"
+                alt="fotografía-ciudad"
+              />
+              <button></button>
+            </div>
+
+            <div class="cities__personal-description">
+              <p>
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p>
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </p>
+              <p>
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
+          </div>
+
+          <div class="cities__container">
+            <div class="cities__title">
+              <h3>Concepción,<br />Chile</h3>
+            </div>
+            <div class="cities__head-information">
+              <ul class="cities__personal-information">
+                <li class="cities__text-category">ARTISTA</li>
+                <li class="cities__text-person">
+                  Constanza Espinoza, diseñadora gráfica
+                </li>
+              </ul>
+            </div>
+            <div class="cities__portada">
+              <img
+                class="shadow"
+                src="./images/img-cities-4.png"
+                alt="fotografía-ciudad"
+              />
+              <button></button>
+            </div>
+
+            <div class="cities__personal-description">
+              <p>
+                Concepción es conocida como la "Capital del Conocimiento" o
+                "Ciudad Universitaria" de Chile. Alberga algunas de las
+                instituciones educativas más prestigiosas del país, destacando
+                la Universidad de Concepción (UdeC). Su campus es un ícono de la
+                ciudad, con su famoso Arco de la Universidad y el Campanil,
+                rodeado de áreas verdes, plazas y esculturas que lo convierten
+                en un espacio no solo académico, sino también recreativo y
+                cultural abierto a la comunidad. La presencia de estudiantes y
+                académicos le otorga a la ciudad una energía joven, intelectual
+                y cosmopolita.
+              </p>
+              <p>
+                El río Biobío, uno de los más importantes de Chile, es un
+                elemento definitorio del paisaje penquista. Sus puentes,
+                especialmente el histórico Puente Ferroviario y el moderno
+                Puente Juan Pablo II, son estructuras emblemáticas. El río no
+                solo es un referente geográfico, sino también un espacio para
+                actividades recreativas y un testigo mudo de la historia de la
+                región.
+              </p>
+            </div>
+          </div>
         </section>
+        
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2025 Constanza Espinoza</p>
