Termino Proyecto sprint 6

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           </div>
         </section>
         <section class="gallery">
+          <h2 class="gallery__title">Galería</h2>
           <div class="gallery__images">
             <img
               class="gallery-image"
@@ -117,7 +118,7 @@
         <section class="cities">
           <div class="cities__container">
             <div class="cities__title">
-              <h3>Cricieth,<br />Gales</h3>
+              <h3>Cricieth,<br class="cities__br" />Gales</h3>
             </div>
             <div class="cities__head-information">
               <ul class="cities__personal-information">
@@ -130,11 +131,11 @@
             </div>
             <div class="cities__portada">
               <img
-                class="shadow"
+                class="cities__image shadow"
                 src="./images/img-cities-1.jpg"
                 alt="fotografía-ciudad"
               />
-              <button></button>
+              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
             </div>
             <div class="cities__personal-description">
               <p>
@@ -155,12 +156,13 @@
                 vio nacer a David Lloyd George, el único galés que ha sido
                 Primer Ministro del Reino Unido.
               </p>
+              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
             </div>
           </div>
 
           <div class="cities__container">
             <div class="cities__title">
-              <h3>Berea,<br />EE.UU.</h3>
+              <h3>Berea,<br class="cities__br" />EE.UU.</h3>
             </div>
             <div class="cities__head-information">
               <ul class="cities__personal-information">
@@ -172,11 +174,11 @@
             </div>
             <div class="cities__portada">
               <img
-                class="shadow"
+                class="cities__image shadow"
                 src="./images/img-cities-2.jpg"
                 alt="fotografía-ciudad"
               />
-              <button></button>
+              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
             </div>
             <div class="cities__personal-description">
               <p>
@@ -197,6 +199,7 @@
                 coeducacional. Algo que en cierta manera la hace única, es que
                 no cobra colegiatura: cada estudiante recibe una beca del 100%.
               </p>
+              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
             </div>
           </div>
 
@@ -215,11 +218,11 @@
 
             <div class="cities__portada">
               <img
-                class="shadow"
+                class="cities__image shadow"
                 src="./images/img-cities-3.jpg"
                 alt="fotografía-ciudad"
               />
-              <button></button>
+              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
             </div>
 
             <div class="cities__personal-description">
@@ -250,6 +253,7 @@
                 los diversos ríos y arroyos que proporcionan agua alrededor del
                 país.
               </p>
+              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
             </div>
           </div>
 
@@ -267,11 +271,11 @@
             </div>
             <div class="cities__portada">
               <img
-                class="shadow"
+                class="cities__image shadow"
                 src="./images/img-cities-4.png"
                 alt="fotografía-ciudad"
               />
-              <button></button>
+              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
             </div>
 
             <div class="cities__personal-description">
@@ -296,10 +300,10 @@
                 actividades recreativas y un testigo mudo de la historia de la
                 región.
               </p>
+              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
             </div>
           </div>
         </section>
-        
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2025 Constanza Espinoza</p>
