--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
           </div>
           <img
-            class="header__front-image shadow"
+            class="header__front-image"
             src="./images/hero-section-img.jpg"
             alt="Paisaje de ciudad costera en blanco y negro"
           />
@@ -131,11 +131,13 @@
             </div>
             <div class="cities__portada">
               <img
-                class="cities__image shadow"
+                class="cities__image"
                 src="./images/img-cities-1.jpg"
                 alt="fotografía-ciudad"
               />
-              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_big-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
             <div class="cities__personal-description">
               <p>
@@ -156,7 +158,9 @@
                 vio nacer a David Lloyd George, el único galés que ha sido
                 Primer Ministro del Reino Unido.
               </p>
-              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_little-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
           </div>
 
@@ -174,11 +178,13 @@
             </div>
             <div class="cities__portada">
               <img
-                class="cities__image shadow"
+                class="cities__image"
                 src="./images/img-cities-2.jpg"
                 alt="fotografía-ciudad"
               />
-              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_big-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
             <div class="cities__personal-description">
               <p>
@@ -199,7 +205,9 @@
                 coeducacional. Algo que en cierta manera la hace única, es que
                 no cobra colegiatura: cada estudiante recibe una beca del 100%.
               </p>
-              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_little-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
           </div>
 
@@ -218,11 +226,13 @@
 
             <div class="cities__portada">
               <img
-                class="cities__image shadow"
+                class="cities__image"
                 src="./images/img-cities-3.jpg"
                 alt="fotografía-ciudad"
               />
-              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_big-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
 
             <div class="cities__personal-description">
@@ -253,7 +263,9 @@
                 los diversos ríos y arroyos que proporcionan agua alrededor del
                 país.
               </p>
-              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_little-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
           </div>
 
@@ -271,11 +283,13 @@
             </div>
             <div class="cities__portada">
               <img
-                class="cities__image shadow"
+                class="cities__image"
                 src="./images/img-cities-4.png"
                 alt="fotografía-ciudad"
               />
-              <button class="button button__big-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_big-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
 
             <div class="cities__personal-description">
@@ -300,7 +314,9 @@
                 actividades recreativas y un testigo mudo de la historia de la
                 región.
               </p>
-              <button class="button button__little-screen shadow">Compra esta obra como NFT</button>
+              <button class="button button_little-screen">
+                Compra esta obra como NFT
+              </button>
             </div>
           </div>
         </section>
