--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <section class="cities">
           <div class="cities__container">
             <div class="cities__title">
-              <h3>Cricieth,<br class="cities__br" />Gales</h3>
+              <h3>Cricieth, Gales</h3>
             </div>
             <div class="cities__head-information">
               <ul class="cities__personal-information">
@@ -166,7 +166,7 @@
 
           <div class="cities__container">
             <div class="cities__title">
-              <h3>Berea,<br class="cities__br" />EE.UU.</h3>
+              <h3>Berea, EE.UU.</h3>
             </div>
             <div class="cities__head-information">
               <ul class="cities__personal-information">
@@ -213,7 +213,7 @@
 
           <div class="cities__container">
             <div class="cities__title">
-              <h3>Muramvya,<br />Burundi</h3>
+              <h3>Muramvya, Burundi</h3>
             </div>
             <div class="cities__head-information">
               <ul class="cities__personal-information">
@@ -271,7 +271,7 @@
 
           <div class="cities__container">
             <div class="cities__title">
-              <h3>Concepción,<br />Chile</h3>
+              <h3>Concepción, Chile</h3>
             </div>
             <div class="cities__head-information">
               <ul class="cities__personal-information">
